--- a/rag.yml
+++ b/rag.yml
@@ -6,6 +6,7 @@ services:
       dockerfile: rag.Dockerfile
     container_name: rag
     privileged: true
+    runtime: nvidia
     logging:
       driver: "json-file"
       options:
