latest gpu optimization

--- a/rag.yml
+++ b/rag.yml
@@ -20,7 +20,9 @@ services:
       resources:
         reservations:
           devices:
-            - capabilities: [gpu]
+            - driver: nvidia
+              count: all
+              capabilities: [compute, utility]
     environment:
       - CODES=
       - DOCUMENTS=./documents
